--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "tailwindcss": "^2.0.4"
+  },
+  "dependencies": {
+    "firebase": "^8.3.2"
   }
 }
