--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "tailwindcss": "^2.0.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.877.0",
+    "dotenv": "^8.2.0",
+    "firebase-admin": "^9.6.0"
   }
 }
